--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.1.1",
   "description": "EUDC2017: An Ionic project",
   "dependencies": {
+    "angular-momentjs": "^0.2.2",
+    "angular-timer": "^1.3.3",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-preprocess": "^2.0.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
