--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4"
+    "gulp-sass": "^2.0.4",
+    "particles.js": "^2.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
