--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
+    "ionic-native": "^2.2.6",
     "particles.js": "^2.0.0"
   },
   "devDependencies": {
