--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
