#136054991 Fix wrapping app for android

--- a/platforms/ios/EUDC2017/EUDC2017-Info.plist
+++ b/platforms/ios/EUDC2017/EUDC2017-Info.plist
@@ -38,6 +38,14 @@
     <true/>
     <key>NSAppTransportSecurity</key>
     <dict>
+      <key>NSExceptionDomains</key>
+      <dict>
+        <key>192.168.1.87</key>
+        <dict>
+          <key>NSExceptionAllowsInsecureHTTPLoads</key>
+          <true/>
+        </dict>
+      </dict>
       <key>NSAllowsArbitraryLoads</key>
       <true/>
     </dict>
