--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,12 @@
 {
-  "name": "HelloIonic",
+  "name": "EUDC2017",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.2"
+  },
+  "dependencies": {
+    "angular-timer": "^1.3.3",
+    "moment": "2.9.0",
+    "moment-timezone": "^0.5.11"
   }
 }
