--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "angular-timer": "^1.3.3",
+    "humanize-duration": "2.8.0",
     "moment": "2.9.0",
     "moment-timezone": "^0.5.11"
   }
