--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.1.1",
   "description": "EUDC2017: An Ionic project",
   "dependencies": {
+    "@ionic-native/onesignal": "^3.4.4",
     "gulp": "^3.5.6",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-autoprefixer": "^3.1.1",
     "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "ionic-native": "^2.2.6",
+    "ionic-native": "^2.8.1",
     "particles.js": "^2.0.0"
   },
   "devDependencies": {
@@ -18,7 +19,13 @@
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
-  "cordovaPlugins": [],
+  "cordovaPlugins": [
+    "onesignal-cordova-plugin",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "ionic-plugin-keyboard"
+  ],
   "cordovaPlatforms": [
     "android",
     "ios"
