--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "@ionic-native/onesignal": "^3.4.4",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-console": "~1.0.7",
-        "cordova-plugin-device": "~1.1.6",
+        "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-whitelist": "^1.3.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
         "gulp-concat": "^2.2.0",
@@ -17,7 +18,7 @@
         "gulp-sass": "^2.3.2",
         "ionic": "^3.5.0",
         "ionic-native": "^2.8.1",
-        "ionic-plugin-keyboard": "~2.2.1",
+        "ionic-plugin-keyboard": "^2.2.1",
         "onesignal-cordova-plugin": "^2.1.2",
         "particles.js": "^2.0.0"
     },
@@ -35,7 +36,10 @@
         "cordova-plugin-console",
         "ionic-plugin-keyboard",
         "onesignal-cordova-plugin",
-        "cordova-plugin-console@~1.0.7"
+        "cordova-plugin-console@~1.0.7",
+        "ionic-plugin-keyboard@~2.2.1",
+        "onesignal-cordova-plugin@^2.1.2",
+        "cordova-plugin-device@~1.1.6"
     ],
     "cordovaPlatforms": [
         "android",
@@ -50,6 +54,7 @@
             "cordova-plugin-console": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
