--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-device": "^1.1.6",
+        "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-whitelist": "^1.3.2",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^3.1.1",
@@ -39,7 +40,8 @@
         "cordova-plugin-console@~1.0.7",
         "ionic-plugin-keyboard@~2.2.1",
         "onesignal-cordova-plugin@^2.1.2",
-        "cordova-plugin-device@~1.1.6"
+        "cordova-plugin-device@~1.1.6",
+        "cordova-plugin-inappbrowser"
     ],
     "cordovaPlatforms": [
         "android",
@@ -51,7 +53,8 @@
             "ionic-plugin-keyboard": {},
             "cordova-plugin-device": {},
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-console": {}
+            "cordova-plugin-console": {},
+            "cordova-plugin-inappbrowser": {}
         },
         "platforms": [
             "android",
